fix pics on mobile

--- a/src/app/registry/registry.component.css
+++ b/src/app/registry/registry.component.css
@@ -14,7 +14,7 @@ h1 {
 
 .image {
   height: 400px;
-  width: 500px;
+  width: auto;
 }
 
 .image img {
